<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/crest"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/header_txt"
        app:srcCompat="@drawable/arsenal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15sp"
            android:gravity="center_horizontal"
            android:text="@string/header_txt"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />
    </LinearLayout>

</LinearLayout>