...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleTextView" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="395dp"
        android:layout_height="383dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="8dp"
...
